# edentts-with-qwen3-tokenizer

./: .gitignore  README.md  changeto24khz.py  eden-with-qwen3-tokenizer.ipynb  get_data.sh  hparams.py  inference.ipynb  inference.py  main.py  preprocess_ljs.py  pyproject.toml  qwen_tokenizer.ipynb  train.py  train_cls.py  tts-bpe-tokenizer-v3.json
config/: eden.json
models/: components.py  edenTTS.py  layers.py  loss.py  modules.py
transformer/: SubLayers.py
utils/: dsp.py
wandb/: latest-run
wandb/run-20260220_172410-lyc5hbog/: run-lyc5hbog.wandb
wandb/run-20260220_172410-lyc5hbog/files/: requirements.txt  wandb-metadata.json
